bug overflow fixed

--- a/src/Component/Info.css
+++ b/src/Component/Info.css
@@ -77,10 +77,10 @@
     }
     
     .infLeft h2 {
-        font-size: 3rem;
+        font-size: 1.2rem;
     }
     .infLeft p {
-        font-size: 1.1rem;
+        font-size: .9rem;
     }
     
     
